src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__activity_requests__activity_info.snap
---
source: src/adapters/cli/output/tests/activity_requests.rs
expression: info_stdout
---
Activity ID: story-1
Time: 1969-12-31T16:00:00
Action: pay
Actor: @alice
Target: @bob
Amount: $1.25
Status: failed
Note: note\n\u{001B}[31mline
Audience: private
Likes: (not provided)
Comments: (not provided)
