src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__activity_requests__activity_list.snap
---
source: src/adapters/cli/output/tests/activity_requests.rs
expression: list_stdout
---
 Id             | Time                | Action            | Direction | Counterparty               | Amount | Status | Note
----------------+---------------------+-------------------+-----------+----------------------------+--------+--------+------------------------
 story-1        | 1969-12-31T16:00:00 | pay               | outgoing  | @bob                       | $1.25  | failed | note\n\u{001B}[31mline
 story-transfer | 1969-12-31T16:00:00 | transfer:standard | outgoing  | Bank\nname (bank ••••1234) | $12.34 | issued |
