src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__activity_requests__activity_reaction_list.snap
---
source: src/adapters/cli/output/tests/activity_requests.rs
expression: "String::from_utf8(stdout)?"
---
Reactions for activity story-1
Total reactions: 3
 Emoji | Count | You reacted
-------+-------+-------------
 🔥    | 2     | yes
 ❤️    | 1     | no
