src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__activity_requests__activity_show.snap
---
source: src/adapters/cli/output/tests/activity_requests.rs
expression: show_stdout
---
Activity ID: story-1
Time: 1970-01-01T00:00:00Z
Action: pay
Direction: outgoing
Counterparty: @bob
Amount: $1.25
Status: failed
Note: note\n\u{001B}[31mline
Audience: private
