src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__activity_requests__disbursement_activity_info.snap
---
source: src/adapters/cli/output/tests/activity_requests.rs
expression: info_stdout
---
Activity ID: story-disbursement
Time: 1969-12-31T16:00:00
Action: disbursement
Account: @alice
Direction: incoming
Counterparty: Synthetic merchant (merchant)
Note: Synthetic reward
Audience: friends
Likes: (not provided)
Comments: (not provided)
Reactions: (not provided)
