src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__activity_requests__disbursement_activity_list.snap
---
source: src/adapters/cli/output/tests/activity_requests.rs
expression: list_stdout
---
Activity for @alice
Direction and counterparty are relative to @alice.
 Id                 | Time                | Action       | Direction | Counterparty                  | Status | Note
--------------------+---------------------+--------------+-----------+-------------------------------+--------+------------------
 story-disbursement | 1969-12-31T16:00:00 | disbursement | incoming  | Synthetic merchant (merchant) |        | Synthetic reward
