src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__activity_requests__external_activity_info_without_amount.snap
---
source: src/adapters/cli/output/tests/activity_requests.rs
expression: stdout
---
Activity ID: story-1
Time: 1969-12-31T16:00:00
Action: pay
Actor: @alice
Target: @bob
Status: settled
Note: visible note
Audience: public
