src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__activity_requests__pending_requests.snap
---
source: src/adapters/cli/output/tests/activity_requests.rs
expression: stdout
---
 Id        | Direction | Counterparty | Amount | Created             | Status  | Note
-----------+-----------+--------------+--------+---------------------+---------+---------------------
 request-1 | incoming  | @bob         | $0.01  | 1969-12-31T16:00:00 | pending | request\u{202E}note
